// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Cart
    classes={
      Object {
        "cartHeading": "",
      }
    }
    sections={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <WithStyles(Typography)
          className=""
          variant="h5"
        >
          0
           
          Classes
        </WithStyles(Typography)>,
        Array [],
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            0,
            " ",
            "Classes",
          ],
          "className": "",
          "variant": "h5",
        },
        "ref": null,
        "rendered": Array [
          0,
          " ",
          "Classes",
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <WithStyles(Typography)
            className=""
            variant="h5"
          >
            0
             
            Classes
          </WithStyles(Typography)>,
          Array [],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              0,
              " ",
              "Classes",
            ],
            "className": "",
            "variant": "h5",
          },
          "ref": null,
          "rendered": Array [
            0,
            " ",
            "Classes",
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Cart renders correctly with multiple sections with the same id 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Cart
    classes={
      Object {
        "cartHeading": "",
      }
    }
    sections={
      Array [
        Object {
          "id": "123",
        },
        Object {
          "id": "123",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <WithStyles(Typography)
          className=""
          variant="h5"
        >
          1
           
          Class
        </WithStyles(Typography)>,
        Array [
          <ForwardRef
            section={
              Object {
                "id": "123",
              }
            }
          />,
        ],
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            1,
            " ",
            "Class",
          ],
          "className": "",
          "variant": "h5",
        },
        "ref": null,
        "rendered": Array [
          1,
          " ",
          "Class",
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "123",
        "nodeType": "function",
        "props": Object {
          "section": Object {
            "id": "123",
          },
        },
        "ref": null,
        "rendered": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "Naked": [Function],
          "displayName": "WithStyles(CartSection)",
          "options": Object {},
          "propTypes": Object {
            "classes": [Function],
            "innerRef": [Function],
          },
          "render": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <WithStyles(Typography)
            className=""
            variant="h5"
          >
            1
             
            Class
          </WithStyles(Typography)>,
          Array [
            <ForwardRef
              section={
                Object {
                  "id": "123",
                }
              }
            />,
          ],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              1,
              " ",
              "Class",
            ],
            "className": "",
            "variant": "h5",
          },
          "ref": null,
          "rendered": Array [
            1,
            " ",
            "Class",
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "123",
          "nodeType": "function",
          "props": Object {
            "section": Object {
              "id": "123",
            },
          },
          "ref": null,
          "rendered": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "Naked": [Function],
            "displayName": "WithStyles(CartSection)",
            "options": Object {},
            "propTypes": Object {
              "classes": [Function],
              "innerRef": [Function],
            },
            "render": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Cart renders correctly with one section 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Cart
    classes={
      Object {
        "cartHeading": "",
      }
    }
    sections={
      Array [
        Object {
          "id": "12345",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <WithStyles(Typography)
          className=""
          variant="h5"
        >
          1
           
          Class
        </WithStyles(Typography)>,
        Array [
          <ForwardRef
            section={
              Object {
                "id": "12345",
              }
            }
          />,
        ],
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            1,
            " ",
            "Class",
          ],
          "className": "",
          "variant": "h5",
        },
        "ref": null,
        "rendered": Array [
          1,
          " ",
          "Class",
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "12345",
        "nodeType": "function",
        "props": Object {
          "section": Object {
            "id": "12345",
          },
        },
        "ref": null,
        "rendered": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "Naked": [Function],
          "displayName": "WithStyles(CartSection)",
          "options": Object {},
          "propTypes": Object {
            "classes": [Function],
            "innerRef": [Function],
          },
          "render": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <WithStyles(Typography)
            className=""
            variant="h5"
          >
            1
             
            Class
          </WithStyles(Typography)>,
          Array [
            <ForwardRef
              section={
                Object {
                  "id": "12345",
                }
              }
            />,
          ],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              1,
              " ",
              "Class",
            ],
            "className": "",
            "variant": "h5",
          },
          "ref": null,
          "rendered": Array [
            1,
            " ",
            "Class",
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "12345",
          "nodeType": "function",
          "props": Object {
            "section": Object {
              "id": "12345",
            },
          },
          "ref": null,
          "rendered": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "Naked": [Function],
            "displayName": "WithStyles(CartSection)",
            "options": Object {},
            "propTypes": Object {
              "classes": [Function],
              "innerRef": [Function],
            },
            "render": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
